deploy-pk-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyer-product-service
  labels:
    app: buyer-product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buyer-product-service
  template:
    metadata:
      labels:
        app: buyer-product-service
    spec:
      containers:
      - name: buyer-product-service
        image: 092026438222.dkr.ecr.me-central-1.amazonaws.com/buyer_product:latest
        ports:
        - containerPort: 4005
        #readinessProbe:
            #httpGet:
              #path: /api/buyer/product
              #port: 4005
            #initialDelaySeconds: 18
            #periodSeconds: 5
        #livenessProbe:
            #httpGet:
              #path: /api/buyer/product
              #port: 4005
            #initialDelaySeconds: 23
            #periodSeconds: 10
        #resources:
          #requests:
           # memory: "1200Mi"
          #limits:
            #memory: "1400Mi"
