service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buyer-product-service
spec:
  selector:
    app: buyer-product-service
  ports:
  - name: http
    port: 4005
    targetPort: 4005
  type: NodePort
